[FIX #53] member의 icon, title null 가능하게 처리